[package]
name = "webidl_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12"
nom = "7.1.3"
regex = "1.10.2"

[dependencies.swc_atoms]
version = "0.6.5"
optional = true

[dependencies.serde]
version = "1.0.193"
features = ["derive"]
optional = true

[features]
serde-derive = ["serde"]
swc-atoms = ["swc_atoms"]
