[package]
name = "webidl_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12"
nom = "7.1"
regex = "1.10"

[dependencies.swc_atoms]
git = "https://github.com/l4yton/swc"
branch = "ignore_typescript"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[features]
serde-derive = ["serde"]
swc-atoms = ["swc_atoms"]
